# yt_safe

./: Dockerfile.transcript-server  README.md  instrumentation.ts  middleware.test.ts  middleware.ts  package.json  vitest.config.ts
.github/workflows/: ci.yml
actions/: channel-actions.ts  news-channel-actions.ts  note-actions.ts
app/: globals.css  layout.tsx  page.tsx
app/api/provider-info/: route.ts
app/favorites/: page.tsx
app/settings/: page.tsx
components/: AppShell.tsx  ChannelAddForm.tsx  NewsPanel.tsx  TopNav.tsx  VideoCard.tsx  VideoDetailPanel.tsx  VideoListPanel.tsx
docs/: azure-transcript-worker.md
hooks/: useDashboard.ts  useVideo.ts
integrations/crewai/youtube_content_analyzer/: README.md  pyproject.toml
integrations/crewai/youtube_content_analyzer/src/youtube_content_analyzer/: crew.py  main.py
integrations/crewai/youtube_content_analyzer/src/youtube_content_analyzer/config/: agents.yaml  tasks.yaml
integrations/crewai/youtube_content_analyzer/src/youtube_content_analyzer/tools/: youtube_video_extractor.py
lib/: config.ts  logger.ts
lib/api/: validate.ts
lib/scripts/: precompute.ts  push-taxonomy-to-supabase.ts  sync-transcripts-to-supabase.mjs  sync-transcripts-to-supabase.ts  transcript-server.mjs
lib/summarization/: gemini-summarizer.ts  local-summarizer.ts  summary-service.ts
lib/supabase/: channels.ts  client.ts  preferences.ts  schema.sql  videos.ts
lib/transcript/: transcript-provider.ts
lib/utils/: transcript.ts
lib/youtube/: youtube-service.ts
types/: dashboard.ts  index.ts
(+9 files in other folders)
