[project]
name = "youtube_content_analyzer"
version = "0.1.0"
description = "youtube_content_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
youtube_content_analyzer = "youtube_content_analyzer.main:run"
run_crew = "youtube_content_analyzer.main:run"
train = "youtube_content_analyzer.main:train"
replay = "youtube_content_analyzer.main:replay"
test = "youtube_content_analyzer.main:test"
run_with_trigger = "youtube_content_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
